--- a/animalbase.html
+++ b/animalbase.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Animalbase</title>
-    <link rel="stylesheet" href="animalbase.css">
+    <link rel="stylesheet" href="animalbase.css" />
   </head>
   <body>
     <h1>Animals</h1>
@@ -16,7 +16,7 @@
       <button class="filter" data-action="filter" data-filter="*">all</button>
     </p>
 
-    <hr>
+    <hr />
 
     <table id="list">
       <thead>
@@ -34,6 +34,7 @@
 
     <template id="animal">
       <tr>
+        <td data-field="star">⭐</td>
         <td data-field="name">NAME</td>
         <td data-field="type">TYPE</td>
         <td data-field="desc">DESCRIPTION</td>
@@ -41,7 +42,6 @@
       </tr>
     </template>
 
-    
     <script src="animalbase.js"></script>
   </body>
 </html>
